[package]
name = "doublezero-serviceability"

# clippy ignores rust-version.toml
rust-version = "1.84.1" # cargo build-sbf --version

# Workspace inherited keys
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
borsh-incremental.workspace = true
bytemuck.workspace = true
doublezero-program-common.workspace = true
ipnetwork.workspace = true
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
solana-program.workspace = true
thiserror.workspace = true
bitflags.workspace = true

[dev-dependencies]
solana-sdk.workspace = true
solana-program-test.workspace = true
base64.workspace = true
strum = { workspace = true }
strum_macros = { workspace = true }

[features]
default = []
no-entrypoint = []
serde = ["dep:serde", "dep:serde_bytes"]
