[package]
name = "doublezero-telemetry"

# clippy ignores rust-version.toml
rust-version = "1.84.1" # cargo build-sbf --version

# Workspace inherited keys
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
borsh-incremental.workspace = true
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
solana-program.workspace = true
doublezero-program-common.workspace = true
doublezero-serviceability.workspace = true
solana-commitment-config.workspace = true

[dev-dependencies]
bincode.workspace = true
ctor.workspace = true
env_logger.workspace = true
log.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true
solana-program-test.workspace = true

[build-dependencies]
doublezero-config.workspace = true

[features]
default = []
localnet = []
testnet = []
devnet = []
mainnet-beta = []
no-entrypoint = []
serde = ["dep:serde", "dep:serde_bytes"]
