[package]
name = "doublezero-sla-program"
version = "0.1.0"
edition = "2021"
 
[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
debug = false
lto = true
opt-level = "z"
 
[dependencies]
borsh = "1.5.7"
eyre = "0.6.12"
ipnetwork = "0.21.1"
solana-program = "2.2.1"
thiserror = "2.0.12"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
mockall = "^0.13"

[dev-dependencies]
solana-program-test = "2.2.7"
solana-sdk = "2.2.2"
