[workspace]

[package]
name = "doublezero-sla-program"
version = "0.2.0"
edition = "2021"
 
[lib]
crate-type = ["cdylib", "lib"]
 
[dependencies]
borsh = "1.5.7"
ipnetwork = "0.21.1"
solana-program = "2.2.1"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
solana-program-test = "2.2.7"
solana-sdk = "2.2.2"
