[workspace]

[package]
name = "doublezero_sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "doublezero_sdk"

[dependencies]
solana-program = "2.2.1"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-pubsub-client = "2.2.7"
solana-account-decoder = "2.2.7"
solana-rpc-client-api = "2.2.7"
solana-transaction-status = "2.2.7"

bincode = "1.3.3"
chrono = "0.4.41"

tokio = { version = "1.45.0", features = ["full"] }
doublezero-sla-program = { path = "../../programs/dz-sla-program", version = "0.1.0" }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serde = "1.0.219"
futures = "0.3.31"

base64 = "0.22.1"
thiserror = "2.0.12"
lazy_static = "1.5.0"
dirs-next = "2.0.0"
directories-next = "2.0.0"
eyre = "0.6.12"
ctrlc = "3.4.7"
mockall = "^0.13"
