[package]
name = "doublezero_sdk"
version = "0.2.0"

# Workspace inherited keys
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doublezero_sdk"

[dependencies]
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
directories-next.workspace = true
dirs-next.workspace = true
doublezero-sla-program.workspace = true
eyre.workspace = true
futures.workspace = true
lazy_static.workspace = true
mockall.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-pubsub-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
thiserror.workspace = true
tempdir.workspace = true
tokio.workspace = true
