[package]
name = "doublezero_sdk"

# Workspace inherited keys
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doublezero_sdk"

[dependencies]
async-trait.workspace = true
backon.workspace = true
base64.workspace = true
bytemuck.workspace = true
bincode.workspace = true
chrono.workspace = true
directories-next.workspace = true
dirs-next.workspace = true
doublezero-config.workspace = true
doublezero-program-common.workspace = true
doublezero-record.workspace = true
doublezero-serviceability.workspace = true
doublezero-telemetry = { workspace = true, features = ["no-entrypoint", "serde"] }
eyre.workspace = true
futures.workspace = true
mockall.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serial_test.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-program.workspace = true
solana-pubsub-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio.workspace = true
solana-system-interface.workspace = true
log.workspace = true

[features]
default-mainnet-beta = []
