[package]
name = "fork-accounts"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
borsh = { workspace = true }
doublezero_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
ureq = { version = "2", features = ["json"] }
