[package]
name = "generate-geolocation-fixtures"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
doublezero-geolocation = { path = "../../../../../smartcontract/programs/doublezero-geolocation", features = ["no-entrypoint"] }
borsh = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-program = "3"

