[package]
name = "generate-serviceability-fixtures"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
doublezero-serviceability = { path = "../../../../../smartcontract/programs/doublezero-serviceability", features = ["no-entrypoint"] }
borsh = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-program = "2"
